fix(PokemonDetails): add z-index values for IRL mobile proper header display

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,8 @@
   background-color: var(--secondary-bg-color);
   padding: 16px;
   width: 100%;
-  
+  z-index: 1;
+
   &.hide {
     top: -100%;
   }
